# SMSD.py

./: .editorconfig  .gitignore  .gitlab-ci.yml  ReadMe.md  genHashTable.py  monotonic_ns_timings.py  pyproject.toml  smsd.cpp  smsd.yug
.ci/: pythonPackagesToInstallFromGit.txt
SMSD/: __init__.py  __main__.py  asio.py  commands.py
SMSD/kaitai/: checksum_simple_additive_u1.py  smsd_lan.py  smsd_limits.py  smsd_modbus.py
SMSD/lan/: protocol.py  serializers.py  uart.py
SMSD/lan/powerStepSim/: Clock.py  PowerStepSimulator.py  __init__.py  gpio.py  instructionProcessors.py  instructions.py  microcode.py  motor.py  nanoops.py  vm.py
SMSD/lan/powerStepSim/motorsData/: __init__.py  motors_names.tsv  proprietary_names.tsv  unknown_motors.tsv
SMSD/text/: __init__.py  asio.py  commands.py  formats.py  hash.py  serial.py
specs/: smsd_lan.ksy  smsd_limits.ksy  smsd_modbus.ksy
tests/: build.ninja  lan_proto_from_pdf.hpp  lan_proto_test.cpp  lan_proto_undocumented.hpp  tests.py
