[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SMSD"
readme = "ReadMe.md"
description = "A library controlling a driver for stepper motors controlled using serial port."
authors = [{name = "KOLANICH"}]
license = {text = "Unlicense"}
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["SMSD"]
urls = {Homepage = "https://github.com/KOLANICH-libs/SMSD.py"}
requires-python = ">=3.4"
dependencies = ["pyserial"]
dynamic = ["version"]

[tool.setuptools]
packages = ["SMSD"]
zip-safe = true

[tool.setuptools_scm]
